force-app/main/default/objects/AgriEdge_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AgriEdge Orders</relationshipLabel>
    <relationshipName>AgriEdgeOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>