force-app/main/default/objects/AgriEdge_Order__c/fields/Discounted_Total__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Total__c</fullName>
    <formula>Total_Amount__c - ( Total_Amount__c * 0.1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>