force-app/main/default/objects/AgriEdge_Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>